# django-env-settings

./: .gitignore  LICENSE  MANIFEST.in  manage.py  setup.cfg
django_env_settings/: asgi.py  settings.py  urls.py  wsgi.py
env_settings/: utils.py
env_settings/management/commands/: generate_dot_env.py  generate_env_variables_yaml.py  populate_settings.py  printenv.py  rename_project.py
env_settings/migrations/: 0001_initial.py
env_settings/templates/: db_settings_template  dot_env_template  env_settings_template  env_variables_template.yaml  logging_settings_template  static_settings_template
